--- a/RoboticArm/RoboticArm.vcxproj
+++ b/RoboticArm/RoboticArm.vcxproj
@@ -81,6 +81,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="QConnectionPanel.cpp" />
+    <ClCompile Include="QControlPanel.cpp" />
     <ClCompile Include="RoboticArm.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +93,12 @@
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="RoboticArm.qrc" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="QControlPanel.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="QConnectionPanel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
