Added a 3D view and loaded a sub.

--- a/RoboticArm/RoboticArm.vcxproj.filters
+++ b/RoboticArm/RoboticArm.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="QConnector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Q3DView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="RoboticArm.h">
@@ -52,6 +55,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="QConnector.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Q3DView.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
