--- a/RoboticArm/RoboticArm.vcxproj
+++ b/RoboticArm/RoboticArm.vcxproj
@@ -43,7 +43,7 @@
   </ImportGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <QtInstall>msvc2017_64</QtInstall>
-    <QtModules>charts;core;datavisualization;gui;serialport</QtModules>
+    <QtModules>3danimation;3dcore;3dextras;3dinput;3dlogic;3drender;charts;core;datavisualization;gui;serialport</QtModules>
   </PropertyGroup>
   <PropertyGroup Label="QtSettings" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <QtInstall>msvc2017_64</QtInstall>
@@ -81,6 +81,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Q3DView.cpp" />
     <ClCompile Include="QConnectionPanel.cpp" />
     <ClCompile Include="QConnector.cpp" />
     <ClCompile Include="QControlPanel.cpp" />
@@ -103,6 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="QConnector.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="Q3DView.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
